# advent_of_code_2025

./: .gitignore  Cargo.toml  Makefile  README.md  benches_and_sizes.sh
day-1/: Cargo.toml
day-1/benches/: bench.rs
day-1/src/: lib.rs  main.rs
day-10/: Cargo.toml  analyze_costs.sh  cost-details.awk  cost-part1.awk  cost.awk  debug-part1.awk  freevars.awk
day-10/benches/: bench.rs
day-10/src/: lib.rs  main.rs
day-11/: Cargo.toml
day-11/benches/: bench.rs
day-11/src/: lib.rs  main.rs
day-12/: Cargo.toml
day-12/benches/: bench.rs
day-12/src/: data_model.rs  lib.rs  main.rs  parser.rs
day-2/: Cargo.toml
day-2/benches/: bench.rs
day-2/src/: lib.rs  main.rs  range.rs  u64_handlers.rs
day-3/: Cargo.toml
day-3/benches/: bench.rs
day-3/src/: lib.rs  main.rs
day-4/: Cargo.toml
day-4/benches/: bench.rs
day-4/src/: lib.rs  main.rs  tinysetqueue.rs
day-5/: Cargo.toml
day-5/benches/: bench.rs
day-5/src/: lib.rs  main.rs  merge.rs  part1.rs  part2.rs  ranged_search.rs  std_parse.rs
day-5/tests/: part1.rs  part2.rs
day-6/: Cargo.toml
day-6/benches/: bench.rs
day-6/src/: lib.rs  main.rs  std_parse.rs
day-6/tests/: part1.rs  part2.rs
day-7/: Cargo.toml
day-7/benches/: bench.rs
day-7/src/: lib.rs  main.rs  std_parse.rs
day-8/: Cargo.toml
day-8/benches/: bench.rs
day-8/src/: lib.rs  main.rs
day-9/: Cargo.toml
day-9/benches/: bench.rs
day-9/src/: lib.rs  main.rs
template/: Cargo.toml  bench.rs  lib.rs  main.rs
