[package]
name = "day-12"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = { version = "8", default-features = false }
heapless = "^0.9"

[features]
default = []
part2 = []
sample = []
std = []

[dev-dependencies]
divan = "^0.1"
gag = "^1.0"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
