[package]
name = "day-5"
version = "0.1.0"
edition = "2024"

[dependencies]
wide = { version = "1.0.2", default-features = false, optional = true }

[features]
default = ["simd"]
part2 = []
sample = []
std = []
simd = ["wide"]

[dev-dependencies]
divan = "^0.1"
gag = "^1.0"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
