[package]
name = "__DAY__"
version = "0.1.0"
edition = "2024"

[dependencies]
# allow opt-in allocation for problems that need Vec/String
alloc = { package = "rust_alloc", version = "0.1", optional = true }

[features]
default = []       # no_std by default
std = []            # enable std for tests or binary
alloc = ["dep:alloc"]
part2 = []
full_bench = []

[dev-dependencies]
divan = "^0.1"
mry = "^0.14"
gag = "^1.0"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
